// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Step wrapper 1`] = `
<Step
  finished={false}
  onOpen={[MockFunction]}
  open={true}
  renderForm={[Function]}
  stepNumber={1}
  stepTitle="onboarding.tutorial.with.jenkins.multi_branch_pipeline.title"
/>
`;

exports[`should render correctly: content for bitbucket 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.owner"
              value="PROJECT_KEY"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.repo"
              value="repo-slug"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket cloud 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.owner"
              value="workspaceId"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.repo"
              value="repo-slug"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket cloud, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucketcloud.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for bitbucket, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.server"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.bitbucket.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for github 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.creds"
            />
          </li>
          <li>
            <LabelValuePair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.repo_url"
              value="https://github.com/PROJECT_KEY"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for github, no binding 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.repo_url"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.github.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;

exports[`should render correctly: content for gitlab 1`] = `
<div
  className="boxed-group-inner"
>
  <p
    className="big-spacer-bottom"
  >
    onboarding.tutorial.with.jenkins.multi_branch_pipeline.intro
  </p>
  <ol
    className="list-styled"
  >
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "new_item",
            "type",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step1"
      />
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
            "source",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab"
      />
      <ul
        className="list-styled"
      >
        <React.Fragment>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.creds"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.owner"
            />
          </li>
          <li>
            <LabelActionPair
              translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.repo"
            />
          </li>
        </React.Fragment>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.gitlab.behaviour"
          />
        </li>
      </ul>
      <p
        className="big-spacer-left padder-left"
      >
        onboarding.tutorial.with.jenkins.multi_branch_pipeline.step2.leave_defaults
      </p>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "tab",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3"
      />
      <ul
        className="list-styled"
      >
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.mode"
          />
        </li>
        <li>
          <LabelActionPair
            translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step3.script_path"
          />
        </li>
      </ul>
    </li>
    <li>
      <SentenceWithHighlights
        highlightKeys={
          Array [
            "save",
          ]
        }
        translationKey="onboarding.tutorial.with.jenkins.multi_branch_pipeline.step4"
      />
    </li>
  </ol>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    continue
    <ChevronRightIcon
      size={13}
    />
  </Button>
</div>
`;
